# scope

programs/adrena-perp-itf/: Cargo.toml
programs/scope/: Cargo.toml
